react-dropzone으로 상세설명 이미지 업로드 기능 만드는 중(서버에 기능 추가 중)

--- a/src/css/productAdd.css
+++ b/src/css/productAdd.css
@@ -82,7 +82,8 @@
   font-size: 32px;
 }
 .productAdd .inner .wrap.stock .title .btn {
-  padding: 10px 15px; margin-left: 20px;
+  padding: 10px 15px;
+  margin-left: 20px;
   background-color: #eee;
 }
 .productAdd .inner .wrap.stock .btn {
