--- a/src/css/payment.css
+++ b/src/css/payment.css
@@ -37,36 +37,65 @@
   font-weight: 600;
 }
 
-.payment .emailBox {
+.payment .infoBox {
   border: 1px solid #ddd;
   border-radius: 10px;
   height: 111px;
   position: absolute;
   top: 60px;
-  width: 100%;
+  width: 49%;
 }
 
-.payment .email {
+.payment .box {
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  height: 111px;
+  position: absolute;
+  top: 60px;
+  left: 200px;
+  width: 49%;
+  margin-left: 5px;
+}
+
+.payment .name {
   color: #000000;
   font-family: "Inter-Regular", Helvetica;
   font-size: 14px;
   font-weight: 400;
   left: 20px;
-  letter-spacing: 0;
-  line-height: normal;
   position: absolute;
-  top: 35px;
+  top: 30px;
   width: 360px;
 }
 
-.payment .email2 {
+.payment .name2 {
   color: #000000;
   font-family: "Inter-Regular", Helvetica;
   font-size: 18px;
   font-weight: 600;
   left: 20px;
-  letter-spacing: 0;
-  line-height: normal;
+  position: absolute;
+  top: 60px;
+  width: 360px;
+}
+
+.payment .phone {
+  color: #000000;
+  font-family: "Inter-Regular", Helvetica;
+  font-size: 14px;
+  font-weight: 400;
+  left: 20px;
+  position: absolute;
+  top: 30px;
+  width: 360px;
+}
+
+.payment .phone2 {
+  color: #000000;
+  font-family: "Inter-Regular", Helvetica;
+  font-size: 18px;
+  font-weight: 600;
+  left: 20px;
   position: absolute;
   top: 60px;
   width: 360px;
@@ -75,9 +104,9 @@
 .payment .addressBox {
   border: 1px solid #ddd;
   border-radius: 10px;
-  height: 140px;
+  height: 170px;
   position: absolute;
-  top: 190px;
+  top: 180px;
   width: 100%;
 }
 
@@ -90,7 +119,7 @@
   letter-spacing: 0;
   line-height: normal;
   position: absolute;
-  top: 17px;
+  top: 28px;
   width: 360px;
 }
 
@@ -112,8 +141,8 @@
   height: 30px;
   border-radius: 5px;
   position: absolute;
-  font-size: 16px;
-  top: -5px;
+  font-size: 14px;
+  top: 15px;
 }
 
 .payment .detailAddressBox {
@@ -122,7 +151,7 @@
   border-radius: 5px;
   position: absolute;
   font-size: 16px;
-  top: 30px;
+  top: 55px;
 }
 
 .payment .coupon {
@@ -131,10 +160,8 @@
   font-size: 14px;
   font-weight: 400;
   left: 20px;
-  letter-spacing: 0;
-  line-height: normal;
   position: absolute;
-  top: 35px;
+  top: 20px;
   width: 360px;
 }
 
@@ -147,46 +174,48 @@
   letter-spacing: 0;
   line-height: normal;
   position: absolute;
-  top: 70px;
+  top: 50px;
   width: 360px;
 }
 
 .payment .btn-secondary {
-  /* display: inline-block; */
   position: absolute;
-  right: 50px;
-  top: -47px;
+  right: 60px;
+  top: -40px;
   padding: 0 5px;
 }
 
 .payment .carrySelectBtn {
   transform: translate(0%, 20%);
   font-size: 14px;
+  color: #fff;
+  padding: 3px 8px;
 }
 
 .payment .chooseBtn {
   display: inline-block;
   position: absolute;
   right: 0;
-  top: -47px;
+  top: -40px;
   padding: 0 5px;
+  color: #fff;
 }
 
 .payment .carryBox {
   border: 1px solid #ddd;
   border-radius: 10px;
-  height: 130px;
+  height: 140px;
   position: absolute;
-  top: 350px;
+  top: 365px;
   width: 100%;
 }
 
 .payment .saleBox {
   border: 1px solid #ddd;
   border-radius: 10px;
-  height: 180px;
+  height: 160px;
   position: absolute;
-  top: 500px;
+  top: 520px;
   width: 100%;
 }
 
@@ -199,7 +228,7 @@
   letter-spacing: 0;
   line-height: normal;
   position: relative;
-  top: 16px;
+  top: 18px;
   width: 360px;
 }
 
@@ -212,20 +241,22 @@
   letter-spacing: 0;
   line-height: normal;
   position: absolute;
-  top: 30px;
+  top: 33px;
   width: 360px;
   height: 30px;
   border-radius: 5px;
 }
 
-.payment .carryMessage8 {
+.payment .carryDirectMessage {
   position: absolute;
-  top: 65px;
+  top: 70px;
   left: 0;
   border: none;
   width: 360px;
-  height: 28px;
-  text-decoration: underline;
+  height: 30px;
+  /* text-decoration: underline; */
+  border: 2px solid #0dcaf0;
+  border-radius: 5px;
   font-size: 14px;
   font-weight: 400;
   padding-left: 5px;
