--- a/src/css/payBuyList.css
+++ b/src/css/payBuyList.css
@@ -102,6 +102,8 @@ a {
   border: 2px solid #ddd;
   right: 110px;
   top: 200px;
+  color: #0D6EFD;
+  cursor: pointer;
 }
 
 .payBuyList .selectBox {
