--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -27,6 +27,10 @@
   text-align: center;
 }
 
+.header .inner .category .text:hover button{
+  color: #ff7d9e;
+}
+
 .header .inner .category2 {
   background-color: inherit;
   display: none;
@@ -104,6 +108,7 @@
   width: 100%;
   height: 100%;
   border-radius: 50%;
+  border: 1px solid #4D4A4A;
 }
 
 @media screen and (max-width: 1500px) {
