--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -27,7 +27,7 @@
   text-align: center;
 }
 
-.header .inner .category .text:hover button{
+.header .inner .category .text:hover button {
   color: #ff7d9e;
 }
 
@@ -104,11 +104,12 @@
 }
 
 .header .inner .nav .linkProfile .profileImage {
+  margin: 25% auto;
   display: block;
-  width: 100%;
-  height: 100%;
+  width: 50%;
+  height: 50%;
   border-radius: 50%;
-  border: 1px solid #4D4A4A;
+  border: 1px solid #4d4a4a;
 }
 
 @media screen and (max-width: 1500px) {
